Revert "refactor: 채택 기능 추가 및 스웨거 수정 및 추가"
This reverts commit af40c9ba6e7e03973a9b0b5fd6cce2273492752a.