@@ -17,7 +17,6 @@ import com.qandding.global.storage.S3PresignService;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Collections;
 import java.util.Map;
 import java.util.stream.Collectors;
 
@@ -76,9 +75,9 @@ public class AnswerQueryRepository {
 		List<AnswerDtos.Summary> content = base.stream()
 			.map(s -> new AnswerDtos.Summary(
 				s.getId(), s.getTitle(), s.getAuthorNickname(), s.isHasAi(), s.getCreatedAt(),
-				imageMap.getOrDefault(s.getId(), java.util.List.of())
+				imageMap.getOrDefault(s.getId(), List.of())
 			))
-			.toList();
+			.collect(Collectors.toList());
 
 		return new PageImpl<>(content, pageable, total);
 	}
